# apistar-crud

./: .babelrc  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  build.py  demo.py  package-lock.json  package.json  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini  webpack.common.js  webpack.dev.js  webpack.prod.js
admin/: App.js  AppContainer.js  api.js  index.js  schema.js
admin/components/Header/: Header.js
admin/components/ResourceForm/: ResourceForm.jsx
admin/components/TablePaginationActions/: index.jsx
admin/components/atoms/MenuResources/: MenuResources.jsx  index.js
admin/components/atoms/PolymorphicInput/: PolymorphicInput.jsx  index.js
admin/components/atoms/SegmentLoader/: SegmentLoader.jsx  index.js
admin/components/molecules/Menu/: Menu.jsx
admin/components/molecules/ResourceForm/: ResourceForm.jsx  index.js
admin/components/molecules/ResourceList/: ResourceList.jsx  index.js
admin/components/pages/: DetailPage.jsx  ErrorInternalServerPage.jsx  ErrorNotFoundPage.jsx  HomePage.jsx  ListPage.jsx
admin/ducks/: index.js  metadata.js  resource.js
admin/routes/: ErrorPage.jsx  ListPage.jsx  Routes.jsx  index.js
admin/sagas/: index.js  metadata.js  resource.js
admin/selectors/: metadata.js  resource.js
apistar_crud/: __init__.py  admin.py  base.py  peewee.py  routes.py  signature.py  sqlalchemy.py
apistar_crud/resource/: base.py  peewee.py  sqlalchemy.py
apistar_crud/templates/: admin.html  admin_detail.html  admin_list.html  admin_main.html
src/: App.css  api.js  index.js
src/components/Header/: Header.js
src/components/ResourceForm/: ResourceForm.jsx
src/components/TablePaginationActions/: TablePaginationActions.jsx
src/ducks/: metadata.js  resource.js
src/routes/: DetailPage.jsx  ErrorPage.jsx  HomePage.js  ListPage.jsx  index.js
src/sagas/: resource.js
src/selectors/: schema.js
tests/: test_admin.py  test_base.py  test_peewee.py  test_routes.py  test_signature.py  test_sqlalchemy.py
tests/resource/: test_base.py  test_peewee.py  test_sqlalchemy.py
