[tool.poetry]
name = "apistar-crud"
version = "0.3.1"
description = "API Star tools to create CRUD resources."
authors = ["José Antonio Perdiguero López <perdy@perdy.io>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/PeRDy/apistar-crud"
keywords = ["apistar", "resource", "crud", "django", "sqlalchemy"]

[package]
include = ["apistar_crud/**/*.py"]

[tool.poetry.dependencies]
python = "^3.6"
apistar = "^0.5.30"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
pytest-xdist = "^1.22"
pytest-cov = "^2.5"
sqlalchemy = "^1.2"
apistar-sqlalchemy = "^0.3.1"
tox = "^3.0"
clinner = "^1.10"
ipython = "^6.4"
aiofiles = "^0.3.2"
whitenoise = "^3.3"
peewee = "^3.5"
apistar-peewee-orm = "^0.3.0"

[tool.poetry.extras]
sqlalchemy = ["apistar-sqlalchemy"]
peewee = ["apistar-peewee-orm"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | build
  | dist
)/
'''
