[bumpversion]
current_version = 0.2.2
commit = True
tag = True

[metadata]
description-file = README.rst
license-file = LICENSE

[bumpversion:file:apistar_crud/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:README.rst]
search = :Version: {current_version}
replace = :Version: {new_version}

[tool:pytest]
minversion = 3
addopts = --cov-report=term --cov-report=xml --cov-report=html --cov=apistar_crud
norecursedirs =
	*settings*
	*urls*
	.tox*
	*docs*

[coverage:run]
source = .
branch = True
omit =
	*settings*
	*__init__.py
	*urls*
	.tox*
	*tests*
	*/migrations/*
	*/features/*
	*manage.py
	*wsgi.py
	*celery.py
	*apps.py
	run*
	build.py

[coverage:report]
show_missing = True
ignore_errors = True
fail_under = 90
exclude_lines =
	pragma: no cover
	pass

	raise AssertionError
	raise NotImplementedError

	if 0:
	if __name__ == .__main__.:

	def __repr__
	if cls\.debug
	if settings\.DEBUG

[coverage:paths]
source = ./

[coverage:html]
directory = .test_report/coverage_html/

[coverage:xml]
output = .test_report/coverage.xml

[isort]
atomic=true
multi_line_output=5
not_skip=__init__.py
known_standard_library=types
known_third_party=pytest

[flake8]
max-line-length=120
